--- a/ajaxLab.html
+++ b/ajaxLab.html
@@ -15,9 +15,9 @@
                 <button type="button" id="idTen">Find ID 10</button>
                 <button type="button" id="commentTwelve">Comments of ID 12</button>
                 <button type="button" id="idTwo">Find ID 2</button>
-                <button type="button" id="createPost">Create New Post</button>
-                <button type="button" id="replacePost14">Replace Post 14</button>
-                <button type="button" id="deletePost14">Delete Post 14</button>
+                <button type="button" id="createP">Create New Post</button>
+                <button type="button" id="replaceP14">Replace Post 14</button>
+                <button type="button" id="deleteP14">Delete Post 14</button>
 			</li>
         </ul>
         
